# fpl-rs

./: Cargo.toml  README.md
migrations/: 0001_create_players_table.sql  0002_create_managers_table.sql  0003_create_page_log.sql  0004_create_add_manager_log.sql
src/: main.rs
src/fpl_api/: data_loader.rs  endpoints.rs  logic.rs  mod.rs  pull_data.rs  types.rs
src/fpl_api/fpl_schemas/: manager_history.rs  manager_summary.rs  manager_team.rs  manager_transfers.rs  mod.rs  player_points_scored.rs  response_trait.rs
