[package]
name = "fpl"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11.18"
rocket = "0.5.0-rc.2"
shuttle-rocket = "0.21.0"
shuttle-runtime = "0.21.0"
shuttle-shared-db = { version = "0.21.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.26.0"
